[gd_scene load_steps=4 format=3 uid="uid://3odaghgjc0n1"]

[ext_resource type="Script" path="res://scripts/inventory_slot.gd" id="1_ncw5p"]
[ext_resource type="Texture2D" uid="uid://ds1uvyqrqeqvj" path="res://assets/Kenny/pngs/tile_0005.png" id="2_ux3we"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kqy21"]

[node name="InventorySlot" type="Control"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 3
anchors_preset = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 160.0
offset_bottom = 160.0
script = ExtResource("1_ncw5p")

[node name="OuterBorder" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.458304, 0.746984, 0.706109, 1)

[node name="InnerBorder" type="ColorRect" parent="."]
custom_minimum_size = Vector2(140, 140)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -70.0
offset_right = 70.0
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.505342, 0.521081, 0.513211, 1)

[node name="ItemIcon" type="Sprite2D" parent="InnerBorder"]
position = Vector2(70, 70)
scale = Vector2(3.5, 3.5)
texture = ExtResource("2_ux3we")

[node name="ItemQuantity" type="Label" parent="InnerBorder"]
layout_mode = 0
offset_left = 85.0
offset_top = 76.0
offset_right = 125.0
offset_bottom = 145.0
theme_override_colors/font_color = Color(0.0679827, 0.0679827, 0.0679827, 1)
theme_override_font_sizes/font_size = 50
text = "1"

[node name="ItemButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_kqy21")
